@@ -5,7 +5,7 @@
 
     <groupId>com.walmartlabs.concord</groupId>
     <artifactId>parent</artifactId>
-    <version>2.24.1-SNAPSHOT</version>
+    <version>2.35.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -37,18 +37,17 @@
         <module>common</module>
         <module>policy-engine</module>
         <module>dependency-manager</module>
+        <module>github-app-installation</module>
         <module>repository</module>
         <module>imports</module>
         <module>forms</module>
         <module>server</module>
         <module>client2</module>
+        <module>runtime/model</module>
         <module>runtime/common</module>
+        <module>runtime/loader</module>
         <module>runtime/v1</module>
         <module>runtime/v2</module>
-        <!-- TODO fix the build order/directory structure -->
-        <!-- runtime/loader only needs models, but runtime folder itself logically depends on server -->
-        <!-- which depends on loader -->
-        <module>runtime/loader</module>
         <module>plugins</module>
         <module>agent</module>
         <module>console2</module>
@@ -69,11 +68,11 @@
 
         <scm.connection>scm:git:https://github.com/walmartlabs/concord.git</scm.connection>
 
-        <docker.plugin.version>0.45.1</docker.plugin.version>
+        <docker.plugin.version>0.48.0</docker.plugin.version>
         <jooq.version>3.14.0</jooq.version>
         <junit.version>5.9.1</junit.version>
         <liquibase.version>4.29.2</liquibase.version>
-        <node.version>20.12.2</node.version>
+        <node.version>24.10.0</node.version>
         <frontend.plugin.version>1.15.1</frontend.plugin.version>
 
         <jdk.version>17</jdk.version>
@@ -106,6 +105,9 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
+                <configuration>
+                    <compilerArgs>-proc:full</compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -129,6 +131,7 @@
                     <processStartTag>*****</processStartTag>
                     <sectionDelimiter>-----</sectionDelimiter>
                     <processEndTag>=====</processEndTag>
+                    <trimHeaderLine>true</trimHeaderLine>
                     <roots>
                         <root>src/main/java</root>
                         <root>src/test/java</root>
@@ -200,6 +203,15 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.sonatype.central</groupId>
+                    <artifactId>central-publishing-maven-plugin</artifactId>
+                    <version>0.7.0</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <publishingServerId>central</publishingServerId>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>com.github.eirslett</groupId>
                     <artifactId>frontend-maven-plugin</artifactId>
                     <version>${frontend.plugin.version}</version>
@@ -228,7 +240,7 @@
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                         <pushChanges>false</pushChanges>
                         <useReleaseProfile>false</useReleaseProfile>
-                        <goals>deploy</goals>
+                        <goals>install org.sonatype.central:central-publishing-maven-plugin:publish</goals>
                         <arguments>--batch-mode -DskipTests -Pconcord-release</arguments>
                     </configuration>
                 </plugin>
@@ -339,7 +351,7 @@
                 <plugin>
                     <groupId>org.eclipse.sisu</groupId>
                     <artifactId>sisu-maven-plugin</artifactId>
-                    <version>0.3.3</version>
+                    <version>0.9.0.M4</version>
                     <executions>
                         <execution>
                             <id>index</id>
@@ -433,6 +445,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>3.11.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.skife.maven</groupId>
+                    <artifactId>really-executable-jar-maven-plugin</artifactId>
+                    <version>2.1.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
